# courses-api

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  db.json  docker-compose.yml  makefile  pyproject.toml  scraper.Dockerfile
.github/workflows/: ci-dev-pr.yml  dependabot-auto-approve.yml  lint.yml  production.yml  scraper.yml
src/: course_fetch.py  data_fetcher.py  data_parser.py  db.json  error_log.txt  fetch_proxies.py  log.py  log_setup.py  main.py  models.py  schemas.py  scraper.py  server.py  term_utils.py  utils.py
src/api/: DataFetcher.py  course_scraper.py  data_fetcher.py  utils.py
src/db/: server.py
src/scraper/: CourseScraper.py  DataParser.py
tests/: test_CourseScraper.py  test_DataFetcher.py  test_api.py  test_datafetcher_integration.py
