[project]
name = "courses-api"
version = "1.0.0"
description = "API for getting University of Adelaide course information"
authors = ["CS Club Open Source Team <dev@csclub.org.au>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "json-repair>=0.30.1",
    "nanoid>=2.0.0",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "ruff>=0.7.3",
    "tinydb>=4.8.2",
]

