[project]
name = "courses-api"
version = "2.0.0"
description = "API for getting Adelaide University course information"
authors = [
    { name = "CS Club Open Source Team", email = "dev@csclub.org.au" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.115.5",
    "json-repair>=0.30.1",
    "nanoid>=2.0.0",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "ruff>=0.7.3",
    "sqlalchemy-libsql>=0.1.0",
    "sqlalchemy>=2.0.36",
]

[tool.ruff]
lint.select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I']
lint.ignore = ["E501"] 
lint.fixable = ["ALL"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.7.3",
]
